# mind-judge

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  skills.md
src/: lib.rs  main.rs
tests/: scaffold.rs
