[package]
name         = "mind-judge"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/mind-judge"
description  = "Mind judge text/model edge adapter."
publish      = false

[lib]
name = "mind_judge"
path = "src/lib.rs"

[[bin]]
name = "mind-judge"
path = "src/main.rs"

[features]
default = []
live-provider = ["judge/live-provider"]

[dependencies]
judge             = { git = "https://github.com/LiGoldragon/judge.git", branch = "main" }
nota              = { package = "nota", git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
signal-domain     = { git = "https://github.com/LiGoldragon/signal-domain.git", rev = "801e1c5bcc824c9760e246205826e3c8e962d005", default-features = false, features = ["nota-text"] }
signal-frame      = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
signal-mind-judge = { git = "https://github.com/LiGoldragon/signal-mind-judge.git", rev = "608e3995713f", features = ["nota-text"] }
tempfile          = "3"
thiserror         = "2"
tokio             = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
